-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033036 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045337 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038535 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053447 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
Improve usability of adlc:
So far, expands can only use instructs that are specified further up in the .ad file.
This is because the check whether nodes used in the expand are also defined
is done during parsing.
Move this check to a later point to relax ordering constraints.
Add a row of additional, more verbose Syntax checks.
Improve format():
If MachNode::format() is called before constants are written to the
constants section, it can fail. Add a safer version of constant_offset
to avoid this.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0117_opto-Improve_adlc_usability.patch
So far, expands can only use instructs that are specified further up in the .ad file.
This is because the check whether nodes used in the expand are also defined
is done during parsing.
Move this check to a later point to relax ordering constraints.
Add a row of additional, more verbose Syntax checks.
Improve format():
If MachNode::format() is called before constants are written to the
constants section, it can fail. Add a safer version of constant_offset
to avoid this.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0117_opto-Improve_adlc_usability.patch
- backported by
-
JDK-8033036 PPC64 (part 117): Improve usability of adlc and format() functionality.
-
- Resolved
-
-
JDK-8038535 PPC64 (part 117): Improve usability of adlc and format() functionality.
-
- Resolved
-
-
JDK-8045337 PPC64 (part 117): Improve usability of adlc and format() functionality.
-
- Resolved
-
-
JDK-8053447 PPC64 (part 117): Improve usability of adlc and format() functionality.
-
- Resolved
-