8028401: PPC (part 117): Improve usability of adlc and format() functionality

Add additional, more verbose syntax checks in adlc. Fix printing constant's problem in format().

Reviewed-by: kvn